welcome.lessons.welcome.bat.bool1.Close10.scala.error
countTeen:-6: error: Missing closing brace `}' assumed here
try {
^countTeen:1: error: expected class or object definition
var g: Int=0
^countTeen:3: error: expected class or object definition
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
^