welcome.lessons.welcome.bat.bool1.Close10.scala.code
var c: Int=0
var d: Int=0
var e: Int=0

def close10(a:Int, b:Int): Int = {
  c=Math.abs(a-10)
  d=Math.abs(b-10)
  if (c<d){
    e=a
  }else{
    e=b
  }
  return e
}